mobile anlytics overflow fix

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -315,9 +315,18 @@ a:hover {
   overflow: hidden;
 }
 
-.w-full-height-full {
-  width: 100%;
-  height: 100%;
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.max-w-xs {
+  max-width: 20rem;
 }
 
 .opacity-50 {
